# readTDR

./: LICENSE  README.md  file_version_info.txt  plotTDR.py  pyproject.toml  readTDR.py
.github/workflows/: python-package-conda.yml
readTDR/: __init__.py  plotTDR.py  readTDR.py
readTDR/tests/: test.tdr  test_readTDR.py
