[tool.poetry]
name = "readtdr"
version = "0.2.0"
description = "Tools for reading the Trial Descriptor Record created by VStim"
authors = ["Joscha Schmiedt <schmiedt@uni-bremen.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  "."
]